--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,11 @@
         "type": "image/png"
       },
       {
+        "src": "icon.png",
+        "sizes": "1000x1000 512x512 64x64 32x32 24x24 16x16",
+        "type": "image/png"
+      },
+      {
         "src": "logo_ship.svg",
         "type": "image/svg",
         "sizes": "512x512 192x192"
@@ -28,7 +33,7 @@
         "sizes": "512x512 192x192 108x108 64x64 32x32 24x24 16x16"
       }
     ],
-    "start_url": "/inbox",
+    "start_url": ".",
     "display": "standalone",
     "theme_color": "#f23d5e",
     "background_color": "#ffffff"
