--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "Shout Desktop",
+  "name": "shout_electron",
   "version": "1.0.0",
   "description": "Texting and chat tools for your business",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "electron-pack": "cp ./main.js ./build/main.js && electron-builder -m",
+    "react-start": "BROWSER=none react-scripts start",
+    "pack": "electron-builder --dir",
+    "postinstall": "install-app-deps",
+    "release": "electron-builder -mw --publish always"
   },
   "repository": "https://github.com/Verdad/shout_electron",
   "keywords": [
@@ -19,10 +24,35 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^13.1.9",
-    "electron-is-dev": "^2.0.0"
+    "electron-builder": "^22.11.7",
+    "electron-notarize": "^1.1.0"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9"
+  },
+  "build": {
+    "appId": "com.shout.desktop",
+    "productName": "Shout Desktop",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "mac": {
+      "category": "public.app-category.business",
+      "entitlements": "./entitlements.mac.plist",
+      "entitlementsInherit": "./entitlements.mac.plist",
+      "hardenedRuntime": true,
+      "provisioningProfile": "./prod_off_store.provisionprofile"
+    },
+    "dmg": {
+      "sign": true
+    },
+    "afterSign": "./notarize.js"
   }
 }
